crates/keron-lang/tests/corpus/errors/parse/single_line_string_raw_newline.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unexpected `"`, expected expression
  --> 1:11
  |
1 | val bad = "hello
  |           ^
  = help: write an expression (literal, name, call, or `(…)`).
